--- a/css/main.css
+++ b/css/main.css
@@ -112,12 +112,12 @@ header .content-wrapper {
 
 header {
   padding: 15px 0;
-  height: 1px;
-  margin: 10px 0 20px 0;
 }
 
 .header-divider {
   width: 100%;
+  height: 1px;
+  margin: 10px 0 20px 0;
 }
 
 header nav {
@@ -193,7 +193,6 @@ aside {
   display: flex;
   justify-content: center;
   flex-flow: row wrap;
-  width: 100%;
 }
 
 .features .features-items {
@@ -210,6 +209,10 @@ aside {
 .features article {
   width: 63%;
   margin: 30px 0;
+}
+
+.features {
+  margin: 0;
 }
 
 /* Reviews */
@@ -366,8 +369,12 @@ aside {
    Modify as content requires.
    ========================================================================== */
 
-@media only screen and (min-width: 35em) {
-  /* Style adjustments for viewports that meet the condition */
+@media only screen and (min-width: 768px) {
+/*Tablet styles here*/
+}
+     
+@media only screen and (min-width: 1200px) {
+/*Desktop styles here*/
 }
 
 @media print,
