--- a/css/main.css
+++ b/css/main.css
@@ -130,6 +130,14 @@ address {
  font-style: normal;
 }
 
+img { 
+	width: 100%;
+}
+ 
+figure {
+  margin: 0;
+}
+
 .content-wrapper {
   width: 90%;
   margin: 50px 0;
@@ -156,6 +164,14 @@ header .content-wrapper {
 
 header {
   padding: 15px 0;
+}
+
+header figure {
+  width: 60%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: row wrap;
 }
 
 .header-divider {
@@ -226,6 +242,10 @@ footer .copyright {
 /* Hero Area */
 
 .hero-area {
+  background: url(../img/unplugged-retreat.jpg);
+  background-size: cover;
+  background-position: center;
+  min-height: 500px;
   display: flex;
   justify-content: center;
   flex-flow: row wrap;
@@ -275,6 +295,9 @@ input[type=button] {
 /* Features */
 
 .features {
+  background: url('../img/unplugged-retreat-features.jpg');
+  background-size: cover;
+  background-position: center;
   display: flex;
   justify-content: center;
   flex-flow: row wrap;
@@ -477,6 +500,16 @@ input[type=button] {
     margin: 100px 0;
   }
 
+  h2 {
+    font-size: 2.25em;
+    line-height: 1.333;
+  }
+
+  h3 {
+      font-size: 1.5em;
+      line-height: 1.25;
+  }
+
   /* Header */
   
   header .content-wrapper {
@@ -487,6 +520,10 @@ input[type=button] {
   header {
     justify-content: space-around;
     padding: 33px 0;
+  }
+
+  header figure {
+    width: 30%;
   }
 
   .header-divider {
@@ -506,10 +543,11 @@ input[type=button] {
     margin: 100px 0;
   }
 
-  .footer-content {
+  footer .footer-content {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    flex-direction: row;
   }
 
   footer .contact {
@@ -520,7 +558,26 @@ input[type=button] {
     width: 100%;
   }
 
+  footer h4 {
+    font-size: 1.5em;
+    margin-bottom: 40px;
+  }
+
+  footer p {
+    line-height: 1.285;
+  }
+
   /* Hero Area */
+
+  .hero-area {
+    min-height: 600px;
+  }
+
+  .hero-area h1 {
+    font-size: 3em;
+    line-height: 1;
+    margin: 0;
+}
 
   /* Aside */
 
@@ -539,8 +596,12 @@ input[type=button] {
 
   /* Features */
 
+  .features h2 {
+    margin-bottom: 20px;
+  }
+
   .features .features-item-description{
-    width: 50%;
+    width: 62%;
   }
 
   .features article {
@@ -553,7 +614,7 @@ input[type=button] {
 
   /* Reviews */
 
-  .reviews  article{
+  .reviews  article {
     display: flex;
     justify-content: space-between;
   }
@@ -562,6 +623,18 @@ input[type=button] {
     width: 49%;
   }
 
+  .reviews h2 {
+    width: 85%;
+  }
+
+  .reviews article figure, .reviews article div {
+    width: 49%
+  }
+
+  .reviews h3 {
+    width: 75%;
+    margin: 0;
+  }
 
   /* ==========================================================================
     About Page
@@ -588,6 +661,10 @@ input[type=button] {
     align-items: flex-start;
   }
 
+  .contact-section h4 {
+    font-size: 1.5em;
+  }
+
   /* ==========================================================================
      FAQ Page
      ========================================================================== */
@@ -603,17 +680,39 @@ input[type=button] {
     flex-basis: 45%;
   }
 
+  .faq h4, .faq p {
+    font-size: .875em;
+    line-height: 1.125;
+  }
 }
      
 @media only screen and (min-width: 1200px) {  
   /*Desktop styles here */  
+      header {
+        padding: 15px 0;
+      }
+  
       .content-wrapper {
            max-width: 960px;
       }
-   
+      
+      h2 {
+        font-size: 2.25em;
+      }
+
+      h3, h4 {
+        font-size: 1.875;
+      }
+
+      p {
+        font-size: 1.125em;
+        line-height: 1.333;
+      }
+
        /* Hero */
       .hero-area h1 {
-          width: 60%;
+          width: 80%;
+          font-size: 3.75em;
       }
    
       /* Aside */
@@ -624,6 +723,10 @@ input[type=button] {
       aside .content-wrapper .form-description,
       aside .content-wrapper .form {
           width: 30%;
+      }
+
+      .form-description p {
+        font-size: 1.125em;
       }
    
       /* Features */
@@ -639,13 +742,25 @@ input[type=button] {
       .reviews article div {
           width: 42%;
       }
+      
+      .reviews h2 {
+        padding-bottom: 50px;
+      }
+
+      footer h4 {
+        font-size: 1.875em;
+      }
    
   /* ==========================================================================
      About Page
      ========================================================================== */
-      .mission h2,
-      .contact-section .content-wrapper h2 {
+      .mission h2, .contact-section .content-wrapper h2 {
           width: 95%;
+          font-size: 3em;
+      }
+
+      .contact-content h4 {
+        font-size: 1.875em;
       }
    
   /* ==========================================================================
@@ -653,6 +768,12 @@ input[type=button] {
      ========================================================================== */
       .faq h2 {
           width: 100%;
+          font-size: 3em;
+      }
+
+      .faq h4, .faq p {
+        font-size: 1.125em;
+        line-height: 1;
       }
    
   }
