Added map to about page

--- a/css/main.css
+++ b/css/main.css
@@ -666,6 +666,10 @@ input[type=button] {
   .mission-content p {
     width: 45%;
   }
+  
+  .map figure {
+    padding-bottom: 45.5%;
+  }
 
   .contact-section .content-wrapper h2 {
     width: 80%;
@@ -770,7 +774,11 @@ input[type=button] {
   /* ==========================================================================
      About Page
      ========================================================================== */
-      .mission h2, .contact-section .content-wrapper h2 {
+      .map figure {
+        padding-bottom: 37.5%;
+      }
+     
+     .mission h2, .contact-section .content-wrapper h2 {
           width: 95%;
           font-size: 3em;
       }
