--- a/css/main.css
+++ b/css/main.css
@@ -227,9 +227,17 @@ footer .social-icons {
 }
 
 footer .social-icons p {
+  background-color: #527158;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+footer .social-icons p i {
+  font-size: 1.3125em;
 }
 
 footer .copyright {
@@ -576,10 +584,6 @@ input[type=button] {
     margin-bottom: 0;
   }
 
-  footer .copyright {
-    width: 100%;
-  }
-
   footer h4 {
     font-size: 1.5em;
     margin-bottom: 40px;
@@ -589,6 +593,14 @@ input[type=button] {
     line-height: 1.285;
   }
 
+  footer .social-icons {
+    width: 12.5em;
+    justify-content: space-between;
+  }
+  
+  footer .copyright {
+    width: 100%;
+  }
   /* Hero Area */
 
   .hero-area {
